--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,6 +14,9 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
+    dataBinding {
+        enabled = true
+    }
 
     buildTypes {
         release {
@@ -52,6 +55,8 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 //    implementation 'io.realm:realm-android:0.84.1'
     implementation 'io.realm:android-adapters:2.1.1'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+
 
 
 }
